🌐 Updated translation messages

--- a/front/src/assets/i18n/en.json
+++ b/front/src/assets/i18n/en.json
@@ -1,1 +1,13 @@
-{}
+{
+    "pages": {
+        "home": {
+            "title": "Youtube Video Downloader",
+            "buttonDownload": "Download",
+            "labelMp3": "MP3",
+            "labelMp4": "MP4",
+            "validations": {
+                "errorWrongYoutubeUrl": "Wrong youtube video url"
+            }
+        }
+    }
+}
