✨ Added condition to check if it is a YouTube video or playlist

--- a/front/src/assets/i18n/es.json
+++ b/front/src/assets/i18n/es.json
@@ -3,6 +3,7 @@
         "home": {
             "title": "Youtube Video Downloader",
             "buttonDownload": "Descargar",
+            "buttonDownloadPlaylist": "Descargar playlist",
             "labelMp3": "MP3",
             "labelMp4": "MP4",
             "actionSheet": {
