--- a/front/src/assets/i18n/en.json
+++ b/front/src/assets/i18n/en.json
@@ -3,6 +3,7 @@
         "home": {
             "title": "Youtube Video Downloader",
             "buttonDownload": "Download",
+            "buttonDownloadPlaylist": "Download playlist",
             "labelMp3": "MP3",
             "labelMp4": "MP4",
             "actionSheet": {
